# Testing-time-visual-reasoning

./: .gitignore  AGENTS.md  IMAGE_REASONING_PROJECT_HANDOFF_CN.md  README.md  pyproject.toml
data/fudd_official/: README.md
docs/: README.md  REMOTE_GPU_CONNECTION.md
docs/history/: IMAGE_REASONING_PROJECT_HANDOFF_CN.md
experiments/: README.md
experiments/01_fudd_clip_cub/: README.md
experiments/02_fudd_sigclip_cub/: README.md
experiments/02_fudd_siglip_cub/: README.md
experiments/03_fudd_sigclip2_cub/: README.md
experiments/03_fudd_siglip2_cub/: README.md
experiments/04_fudd_eva02_clip_cub/: README.md
experiments/05_residual_head_clip_cub/: README.md
experiments/06_feature_adapter_clip_multi_bird/: README.md
experiments/07_feature_adapter_clip_birdmix_v2_cub/: README.md
experiments/_template/: README.md
notebooks/fudd/: clip_cub_reproduction.ipynb
scripts/feature_adapter/: cache_clip_manifest_features.py  prepare_big_bird.py  prepare_birdnet.py  prepare_inat2021_mini_aves.py  prepare_nm_uas_waterfowl.py  prepare_usgs_aerial_avian.py  prepare_visual_wetlandbirds.py  run_clip_birdmix_study.py  run_clip_birdmix_v2_study.py  run_clip_multi_bird.py  summarize_clip_birdmix_study.py  summarize_clip_birdmix_v2_study.py  verify_clip_runtime.py
scripts/fudd/: analyze_paired_run.py  build_clip_cub_notebook.py  compare_failure_sets.py  run_clip_cub.py  run_eva02_clip_cub.py  run_single_image_prompt_pilot.py
scripts/residual_head/: cache_clip_cub_features.py  (+1 more)
tests/: conftest.py  test_gpu_lock.py  test_metrics.py  test_paired_run_analysis.py
(+113 files in other folders)
